# copr-test

./: Cargo.toml
.rpm/: copr-test.spec
