[package]
name = "copr-test"
version = "0.3.0"
edition = "2021"
description = "Test building a Rust project in Copr for RHEL 8"
authors = ["Marek Suchánek <msuchane@redhat.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.rpm]
package = "copr-test"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
copr-test = { path = "/usr/bin/copr-test" }
